every thing is working still need to fix nginx